manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yukari
  labels:
    app.kubernetes.io/name: yukari
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yukari
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yukari
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: main
          image: ghcr.io/xeserv/yukari:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "2"
              memory: "768Mi"
            requests:
              cpu: "1"
              memory: "500Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9200
            initialDelaySeconds: 3
            periodSeconds: 3
