manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yukari
  labels:
    app.kubernetes.io/name: yukari
spec:
  selector:
    app.kubernetes.io/name: yukari
  ports:
    - port: 80
      targetPort: 9200
      name: http
  type: ClusterIP
